# OpenGL_cpp

./: .gitignore  CMakeLists.txt  Camera.hpp  Light.hpp  OpenGL_input.hpp  OpenGL_math.hpp  OpenGL_utils.hpp  brick.mtl  camera.cpp  camera.hpp  cmake_buildrun.sh  cubemap.frag  cubemap.vert  fragShader.frag  fs.frag  fs2.frag  gcc.sh  glm_header.hpp  hdr.frag  hdr.vert  learnopengl  main.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  new_cmake_build.sh  readFile.hpp  shader.cpp  shader.hpp  vertShader.vert  vs.vert
glad/: CMakeLists.txt  glad.c
glad/include/: glad.h
include/glad/: glad.h
src/: glad.c
