cmake_minimum_required(VERSION 3.10)
project(OpenGL_cpp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
add_subdirectory(glad)
add_executable(OpenGL_cpp main.cpp)
target_include_directories(OpenGL_cpp PRIVATE ${CMAKE_SOURCE_DIR}/glad/include)
set(GLAD_SOURCES glad/glad.c)
target_sources(OpenGL_cpp PRIVATE ${GLAD_SOURCES})
target_link_libraries(OpenGL_cpp PRIVATE OpenGL::GL glfw glad)